--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>#fremtidensvejle</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script type="text/javascript" src="script/instagram.js"></script>
 <style>
 * {
     box-sizing: border-box;
@@ -24,8 +25,9 @@ body {
 
 .content {
     position: fixed;
+	text-align: center;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0);
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
@@ -50,15 +52,31 @@ body {
 <body>
 
 <video autoplay muted loop id="myVideo">
-  <source src="cykel.mp4" type="video/mp4">
+  <source src="color.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
 
+
+
+<div id="Instafeed"></div>
+
+
+
 <div class="content">
-  <h1>Heading</h1>
-  <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei. Id qui nemore latine molestiae, ad mutat oblique delicatissimi pro.</p>
-  <button id="myBtn" onclick="myFunction()">Pause</button>
+
+  
+
+
 </div>
+
+<script type="text/javascript">
+    var feed = new Instafeed({
+        get: 'tagged',
+        tagName: 'awesome',
+        clientId: 'cfe0f312c2c2475f95da72704e29343a'
+    });
+    feed.run();
+</script> 
 
 <script>
 var video = document.getElementById("myVideo");
