--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>#fremtidensvejle</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="script/instagram.js"></script>
+<script type="text/javascript" src="instagram.js"></script>
 <style>
 * {
     box-sizing: border-box;
@@ -72,7 +72,7 @@ body {
 <script type="text/javascript">
     var feed = new Instafeed({
         get: 'tagged',
-        tagName: 'awesome',
+        tagName: 'test',
         clientId: 'cfe0f312c2c2475f95da72704e29343a'
     });
     feed.run();
