--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <title>#fremtidensvejle</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="instagram.js"></script>
+<script type="text/javascript" src="instafeed.min.js"></script>
+
 <style>
 * {
     box-sizing: border-box;
@@ -19,35 +20,23 @@ body {
     position: fixed;
     right: 0;
     bottom: 0;
-    min-width: 100%; 
+    min-width: 100%;
     min-height: 100%;
 }
 
 .content {
     position: fixed;
-	text-align: center;
+	text-align: right;
     bottom: 0;
-    background: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
     width: 100%;
-    padding: 20px;
-}
-
-#myBtn {
-    width: 200px;
-    font-size: 18px;
     padding: 10px;
-    border: none;
-    background: #000;
-    color: #fff;
-    cursor: pointer;
 }
 
-#myBtn:hover {
-    background: #ddd;
-    color: black;
-}
 </style>
+
+
 </head>
 <body>
 
@@ -58,14 +47,10 @@ body {
 
 
 
-<div id="Instafeed"></div>
-
-
-
 <div class="content">
+<h2>#fremtidensvejle</h2>
 
-  
-
+<div id="instafeed"></div>
 
 </div>
 
@@ -73,11 +58,12 @@ body {
     var feed = new Instafeed({
         get: 'tagged',
         tagName: 'test',
-        clientId: 'cfe0f312c2c2475f95da72704e29343a'
+		clientId: 'cfe0f312c2c2475f95da72704e29343a'
+		resolution: 'standard_resolution',
+		template: '<a href="{{link}}"><img src="{{image}}" /></a>'
     });
     feed.run();
-</script> 
-
+</script>
 <script>
 var video = document.getElementById("myVideo");
 var btn = document.getElementById("myBtn");
