--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
 <title>#fremtidensvejle</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="instafeed.min.js"></script>
-
 <style>
 * {
     box-sizing: border-box;
@@ -16,68 +14,37 @@ body {
     font-size: 17px;
 }
 
-#myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
+.img2 {
+	position: fixed;
+	top: 300px;
+	right: 0;
+	min-width: 100%;
 }
 
 .content {
     position: fixed;
-	text-align: right;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
-    padding: 10px;
+	top: 60px;
+	background: rgba(0, 0, 0, 0);
+    color: #111111;
+	width: 100%;
+    height: 100%;
+    padding: 0px;
+	z-index: -1;
 }
-
 </style>
-
-
 </head>
+
 <body>
 
-<video autoplay muted loop id="myVideo">
-  <source src="color.mp4" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
 
-
-
-<div class="content">
-<h2>#fremtidensvejle</h2>
-
-<div id="instafeed"></div>
-
+<div class="img2">
+<img src="Fremtidens_Vejle.png" width="100%"></img>
 </div>
 
-<script type="text/javascript">
-    var feed = new Instafeed({
-        get: 'tagged',
-        tagName: 'test',
-		clientId: 'cfe0f312c2c2475f95da72704e29343a'
-		resolution: 'standard_resolution',
-		template: '<a href="{{link}}"><img src="{{image}}" /></a>'
-    });
-    feed.run();
-</script>
-<script>
-var video = document.getElementById("myVideo");
-var btn = document.getElementById("myBtn");
-
-function myFunction() {
-  if (video.paused) {
-    video.play();
-    btn.innerHTML = "Pause";
-  } else {
-    video.pause();
-    btn.innerHTML = "Play";
-  }
-}
-</script>
+<div class="content">
+<a href="https://instawidget.net/v/tag/vejlekommune" id="link-a153f3a7b587feaff0c34a0fd7b6794669e6d3e8ce38fa5eaf1c56cb10f766b0">#vejlekommune</a>
+<script src="https://instawidget.net/js/instawidget.js?u=a153f3a7b587feaff0c34a0fd7b6794669e6d3e8ce38fa5eaf1c56cb10f766b0&width=100%"></script>
+</div>
 
 </body>
 </html>
