--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ body {
 <img src="Fremtidens_Vejle.png" width="100%"></img>
 </div>
 
-<div class="content">
-<a href="https://instawidget.net/v/tag/vejlekommune" id="link-a153f3a7b587feaff0c34a0fd7b6794669e6d3e8ce38fa5eaf1c56cb10f766b0">#vejlekommune</a>
-<script src="https://instawidget.net/js/instawidget.js?u=a153f3a7b587feaff0c34a0fd7b6794669e6d3e8ce38fa5eaf1c56cb10f766b0&width=100%"></script>
+<div class="content"><!-- InstaWidget -->
+<a href="https://instawidget.net/v/tag/vejlekommune" id="link-90894fdbdef7965bd807f3e8dbd86af65b9206067be76fa5cc0100d008716c49">#vejlekommune</a>
+<script src="https://instawidget.net/js/instawidget.js?u=90894fdbdef7965bd807f3e8dbd86af65b9206067be76fa5cc0100d008716c49&width=100%"></script>
 </div>
 
 </body>
