--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ body {
 <img src="Fremtidens_Vejle.png" width="100%"></img>
 </div>
 
-<div class="content"><!-- InstaWidget -->
-<a href="https://instawidget.net/v/tag/vejlekommune" id="link-90894fdbdef7965bd807f3e8dbd86af65b9206067be76fa5cc0100d008716c49">#vejlekommune</a>
-<script src="https://instawidget.net/js/instawidget.js?u=90894fdbdef7965bd807f3e8dbd86af65b9206067be76fa5cc0100d008716c49&width=100%"></script>
+<div class="content">
+<a href="https://instawidget.net/v/tag/vejlekommune" id="link-1ae37a93e441e89d7bad06bbaa015d40c679e446bffc604a0e6b3a30ea74becb">#vejlekommune</a>
+<script src="https://instawidget.net/js/instawidget.js?u=1ae37a93e441e89d7bad06bbaa015d40c679e446bffc604a0e6b3a30ea74becb&width=100%"></script>
 </div>
 
 </body>
