--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>#fremtidensvejle</title>
+<meta http-equiv="refresh" content="1800">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
