--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
     margin: 0;
     font-family: Arial;
     font-size: 17px;
+	cursor: none;
 }
 
 .img2 {
@@ -31,6 +32,7 @@ body {
     height: 100%;
     padding: 0px;
 	z-index: -1;
+	pointer-events: none;
 }
 </style>
 </head>
