--- a/old/index.html
+++ b/old/index.html
@@ -23,7 +23,7 @@ body {
 	min-width: 100%;
 }
 
-.feed {
+.content {
     position: fixed;
 	top: 0px;
 	background: rgba(0, 0, 0, 0);
@@ -34,14 +34,6 @@ body {
 	z-index: -1;
 	pointer-events: none;
 }
-.content {
-    position: fixed;
-    bottom: 0;
-	text-align; right;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
-    padding: 5px;
 </style>
 </head>
 
@@ -52,13 +44,9 @@ body {
 <img src="Fremtidens_Vejle.png" width="100%"></img>
 </div>
 
-<div class="feed">
-<a href="https://www.instagram.com/explore/tags/fremtidensvejle/" id="link-49b20b8371c04a2c24d2034415138e07bb8ce7c912274259780f672912a42710">#fremtidensvejle</a>
-<script src="https://instawidget.net/js/instawidget.js?u=49b20b8371c04a2c24d2034415138e07bb8ce7c912274259780f672912a42710&width=100%"></script>
-</div>
-
 <div class="content">
-<h2>Tag dit billede på Instagram med #fremtidensvejle</h2>
+<a href="https://instawidget.net/v/tag/vejlekommune" id="link-1ae37a93e441e89d7bad06bbaa015d40c679e446bffc604a0e6b3a30ea74becb">#vejlekommune</a>
+<script src="https://instawidget.net/js/instawidget.js?u=1ae37a93e441e89d7bad06bbaa015d40c679e446bffc604a0e6b3a30ea74becb&width=100%"></script>
 </div>
 
 </body>
